search returns items with name matching query. requires hsqldb server to be running.

--- a/petstore-app/src/main/webapp/WEB-INF/velocity/searchResults.vm
+++ b/petstore-app/src/main/webapp/WEB-INF/velocity/searchResults.vm
@@ -3,6 +3,6 @@
 	<title>PetStore - Search Resuts</title>
 </head>
 <body>
-	Found <span id="numberOfItemsFound">0</span> result(s)
+	Found <span id="numberOfItemsFound">${matchingItems.size()}</span> result(s)
 </body>
 </html>
