--- a/petstore-app/src/main/webapp/WEB-INF/velocity/home.vm
+++ b/petstore-app/src/main/webapp/WEB-INF/velocity/home.vm
@@ -1,9 +1,8 @@
 <html>
 <head>
-<title>PetStore</title>
-<meta content="text/html; charset=utf-8" http-equiv=Content-Type>
+    <title>PetStore</title>
 </head>
-<body bgColor=white>
+<body>
 Pet Store Home
 </body>
 </html>
