Item should really have been Product. Fixed now.

--- a/petstore-app/src/main/webapp/WEB-INF/velocity/includes/searchForm.vm
+++ b/petstore-app/src/main/webapp/WEB-INF/velocity/includes/searchForm.vm
@@ -1,4 +1,4 @@
-<form action="$base/items" method="get">
+<form action="$base/products" method="get">
     <fieldset class="inputs">
         <ol>
             <li>
