Using SpringMVC conventions

--- a/petstore-app/src/main/webapp/WEB-INF/velocity/products.vm
+++ b/petstore-app/src/main/webapp/WEB-INF/velocity/products.vm
@@ -3,6 +3,6 @@
     <title>PetStore - Products</title>
 </head>
 <body>
-Found <span id="match-count">${matchingProducts.size()}</span> result(s)
+Found <span id="match-count">${productList.size()}</span> result(s)
 </body>
 </html>
