WIP search displays summary of matching products

--- a/petstore-app/src/main/webapp/WEB-INF/velocity/products.vm
+++ b/petstore-app/src/main/webapp/WEB-INF/velocity/products.vm
@@ -4,5 +4,10 @@
 </head>
 <body>
 Found <span id="match-count">${productList.size()}</span> result(s)
+<ul>
+#foreach ($product in $productList) 
+	<li id="product"></li>
+#end
+</ul>
 </body>
 </html>
