--- a/petstore-app/src/main/webapp/WEB-INF/velocity/products.vm
+++ b/petstore-app/src/main/webapp/WEB-INF/velocity/products.vm
@@ -4,9 +4,9 @@
 </head>
 <body>
 Found <span id="match-count">$productList.size()</span> result(s)
-<ul>
-#foreach ($product in $productList) 
-	<li id="product">$product.getName()</li>
+<ul id="products">
+#foreach ($product in $productList)
+	<li>$product.getName()</li>
 #end
 </ul>
 </body>
