displays no table of products if search does not find a match.

--- a/petstore-app/src/main/webapp/WEB-INF/velocity/products.vm
+++ b/petstore-app/src/main/webapp/WEB-INF/velocity/products.vm
@@ -4,6 +4,7 @@
 </head>
 <body>
 Found <span id="match-count">$productList.size()</span> result(s)
+#if ($productList)
 <table id="products">
 <thead>
 <tr>
@@ -20,5 +21,6 @@ Found <span id="match-count">$productList.size()</span> result(s)
 	</tr>
 #end
 </table>
+#end
 </body>
 </html>
