fixed test checking absence of product table when no product is found.

--- a/petstore-app/src/main/webapp/WEB-INF/velocity/products.vm
+++ b/petstore-app/src/main/webapp/WEB-INF/velocity/products.vm
@@ -4,7 +4,7 @@
 </head>
 <body>
 Found <span id="match-count">$productList.size()</span> result(s)
-#if ($productList)
+#if ($productList.size() > 0)
 <table id="products">
 <thead>
 <tr>
