--- a/petstore-app/src/main/webapp/stylesheets/main.css
+++ b/petstore-app/src/main/webapp/stylesheets/main.css
@@ -1,6 +1,10 @@
 body {
-    font: 62.5% "Lucida Sans Unicode", "Lucida Grande", sans-serif;
+    font: 100% "Lucida Sans Unicode", "Lucida Grande", sans-serif;
+	margin: 0 auto;
+	width: 960px;
 }
+
+img {border-width: 0;}
 
 ol, ul, p {
     font-size: 1.2em;
@@ -11,11 +15,6 @@ form, fieldset, legend {
     border: 0;
     padding: 0;
     margin: 0;
-}
-
-legend {
-    font-size: 2em;
-    padding-bottom: .5em;
 }
 
 form ol, form ul {
@@ -57,10 +56,6 @@ button {
     padding: .2em .5em;
 }
 
-img.logo {
-    width: 50px;
-}
-
 img.photo {
 	width: 60px;
 	border: 1px solid black;	
@@ -74,3 +69,11 @@ th {
   border-bottom:1px solid black;
   text-align: left;
 }
+
+/* ******* */
+
+#search-box {float: right; padding: 10px 0;}
+#search-box fieldset {display: inline;}
+
+a#homelink {background: #fff url(../images/logo.png) no-repeat; display: inline-block; height: 100px; text-indent: -9999px; width: 75px;}
+a#homelink:hover {background: #fff url(../images/logo-home.png) no-repeat;}
