styling header & footer

--- a/petstore-app/src/main/webapp/WEB-INF/velocity/products.vm
+++ b/petstore-app/src/main/webapp/WEB-INF/velocity/products.vm
@@ -4,10 +4,10 @@
 </head>
 <body>
     #if (!$productList)
-    <p id="no-match">No product matching "$request.Keyword" was found</p></p>
+    <p id="no-match">No product matching "$request.Keyword" was found</p>
 	#else
 	    #if ($productList.size() == 1)
-	    <p>Found <span id="match-count">$productList.size()</span> result for "$request.Keyword"</p>
+	    <p>Found <span id="match-count">1</span> result for "$request.Keyword"</p>
 		#else
     	<p>Found <span id="match-count">$productList.size()</span> results for "$request.Keyword"</p>
 		#end
@@ -15,19 +15,19 @@
     <table id="products">
         <thead>
         <tr>
-            <th>Number</th>
             <th></th>
             <th>Name</th>
             <th>Description</th>
+            <th>Number</th>
         </tr>
         </thead>
         <tbody>
         #foreach ($product in $productList)
         <tr class="product">
-            <td class="number">$product.Number</td>
             <td><img class="photo" src="$attachments.getAttachmentUrl($product)"></td>
             <td class="name"><a href="items?product_number=$product.Number">$product.Name</a></td>
             <td>$!product.Description</td>
+            <td class="number">$product.Number</td>
         </tr>
         #end
         </tbody>
