--- a/petstore-app/src/main/webapp/WEB-INF/velocity/cartitems.vm
+++ b/petstore-app/src/main/webapp/WEB-INF/velocity/cartitems.vm
@@ -18,18 +18,18 @@
         </tr>
         </thead>
         <tbody>
-            #foreach ($cartItem in $cart.Items)
-                #if( $velocityCount % 2 == 0 )
+            #foreach ($cartItem in $cart.items)
+                #if( $count % 2 == 0 )
                     #set( $rowStyle = 'evenrow' )
                 #else
                     #set( $rowStyle = 'oddrow' )
                 #end
 
-            <tr id="cart_item_$cartItem.ItemNumber" class="cart-item $rowStyle">
-                <td class="count">$cartItem.Quantity</td>
-                <td class="item">$!cartItem.ItemDescription</td>
-                <td class="price">$cartItem.ItemUnitPrice</td>
-                <td class="total">$cartItem.TotalPrice</td>
+            <tr id="cart_item_$cartItem.itemNumber" class="cart-item $rowStyle">
+                <td class="count">$cartItem.quantity</td>
+                <td class="item">$!cartItem.itemDescription</td>
+                <td class="price">$cartItem.itemUnitPrice</td>
+                <td class="total">$cartItem.totalPrice</td>
             </tr>
             #end
         </tbody>
