--- a/petstore-app/src/main/webapp/WEB-INF/velocity/decorators/main.vm
+++ b/petstore-app/src/main/webapp/WEB-INF/velocity/decorators/main.vm
@@ -2,14 +2,14 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en-US" lang="en-US">
 <head>
     <meta content="text/html;charset=UTF-8" http-equiv="Content-Type"/>
-    <link href="${base}/stylesheets/main.css?$date.systemTime" media="screen" rel="stylesheet" type="text/css" />
-	<link rel="shortcut icon" href="${base}/images/favicon.ico" />
+    <link href="$base/stylesheets/main.css?$date.systemTime" media="screen" rel="stylesheet" type="text/css" />
+	<link rel="shortcut icon" href="$base/images/favicon.ico" />
     <title>$title</title>
 	$head    
 </head>
 <body>
 <div id="header">
-    <a href="/petstore/" id="homelink">Home</a>
+    <a href="$base" id="homelink">Home</a>
     <div id="search-box">
         #parse("/WEB-INF/velocity/includes/searchForm.vm")
     </div>
