Display cart items count in home page and link to cart details.

--- a/petstore-app/src/main/webapp/WEB-INF/velocity/decorators/main.vm
+++ b/petstore-app/src/main/webapp/WEB-INF/velocity/decorators/main.vm
@@ -14,7 +14,8 @@
         #parse("/WEB-INF/velocity/includes/searchForm.vm")
     </div>
     <div id="shopping-cart">
-		<a href="#">X items</a>
+        #set( $cart = $session.getAttribute('scopedTarget.cart') )        
+        #parse("/WEB-INF/velocity/includes/cartLink.vm")
     </div>
 </div>
 <div id="content">
