--- a/petstore-app/src/main/webapp/WEB-INF/velocity/cartitems.vm
+++ b/petstore-app/src/main/webapp/WEB-INF/velocity/cartitems.vm
@@ -18,20 +18,30 @@
         </tr>
         </thead>
         <tbody>
-            #foreach ($cartItem in $cart.items)
-                #if( $count % 2 == 0 )
-                    #set( $rowStyle = 'evenrow' )
-                #else
-                    #set( $rowStyle = 'oddrow' )
-                #end
-
-            <tr id="cart_item_$cartItem.itemNumber" class="cart-item $rowStyle">
-                <td class="count">$cartItem.quantity</td>
-                <td class="item">$!cartItem.itemDescription</td>
-                <td class="price">$cartItem.itemUnitPrice</td>
-                <td class="total">$cartItem.totalPrice</td>
-            </tr>
+        #foreach ($cartItem in $cart.items)
+            #if( $count % 2 == 0 )
+                #set( $rowStyle = 'evenrow' )
+            #else
+                #set( $rowStyle = 'oddrow' )
             #end
+
+        <tr id="cart_item_$cartItem.itemNumber" class="cart-item $rowStyle">
+            <td class="count">$cartItem.quantity</td>
+            <td class="item">$!cartItem.itemDescription</td>
+            <td class="price">$cartItem.itemUnitPrice</td>
+            <td class="total">$cartItem.totalPrice</td>
+        </tr>
+        #end
+        <tr class="cart-summary">
+            <td colspan="4">
+                <ol class="calculations">
+                    <li>
+                        <span class="label">Grand Total: </span>
+                        <span id="cart-grand-total" class="total">$cart.grandTotal</span>
+                    </li>
+                </ol>
+            </td>
+        </tr>
         </tbody>
     </table>
 </fieldset>
