--- a/petstore-app/src/main/webapp/WEB-INF/velocity/decorators/main.vm
+++ b/petstore-app/src/main/webapp/WEB-INF/velocity/decorators/main.vm
@@ -2,32 +2,38 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en-US" lang="en-US">
 <head>
     <meta content="text/html;charset=UTF-8" http-equiv="Content-Type"/>
-    <link href="$base/stylesheets/main.css?$date.systemTime" media="screen" rel="stylesheet" type="text/css" />
-	<link rel="shortcut icon" href="$base/images/favicon.ico" />
+    <link href="$base/stylesheets/main.css?$date.systemTime" media="screen" rel="stylesheet" type="text/css"/>
+    <link rel="shortcut icon" href="$base/images/favicon.ico"/>
     <title>$title</title>
-	$head    
+    $head
 </head>
 <body>
-<div id="header">
-    <a href="$base" id="homelink">Home</a>
-    <div id="search-box">
-        #parse("/WEB-INF/velocity/includes/searchForm.vm")
+<div id="petstore">
+    <div id="header">
+        <a href="$base" id="homelink">Home</a>
+
+        <div id="search-box">
+            #parse("/WEB-INF/velocity/includes/_search.vm")
+        </div>
+        <div id="logout">
+            #parse("/WEB-INF/velocity/includes/_logout.vm")
+        </div>
+        <div id="shopping-cart">
+            #set( $cart = $session.getAttribute('scopedTarget.cart') )
+        #parse("/WEB-INF/velocity/includes/_cart.vm")
+        </div>
     </div>
-    <div id="shopping-cart">
-        #set( $cart = $session.getAttribute('scopedTarget.cart') )        
-        #parse("/WEB-INF/velocity/includes/cartLink.vm")
+    <div id="content">
+        $body
     </div>
-</div>
-<div id="content">
-    $body
-</div>
-<div id="footer">
-<ul>
-	<li>iguana</li>
-	<li>dog</li>
-	<li>cat</li>
-	<li>bird</li>
-</ul>
+    <div id="footer">
+        <ul>
+            <li>iguana</li>
+            <li>dog</li>
+            <li>cat</li>
+            <li>bird</li>
+        </ul>
+    </div>
 </div>
 </body>
 </html>
