o When testing url path in views unit tests, match the entire path. o Started work on cart checkout: can continue shopping from cart page

--- a/petstore-app/src/main/webapp/WEB-INF/velocity/cartitems.vm
+++ b/petstore-app/src/main/webapp/WEB-INF/velocity/cartitems.vm
@@ -45,5 +45,10 @@
         </tbody>
     </table>
 </fieldset>
+<div id="actions">
+    <ol>
+        <li><a id="continue-shopping" href="$base">Continue Shopping</a></li>
+    </ol>
+</div>
 </body>
 </html>
