--- a/petstore-app/src/main/webapp/WEB-INF/velocity/products.vm
+++ b/petstore-app/src/main/webapp/WEB-INF/velocity/products.vm
@@ -26,7 +26,7 @@
     #set( $rowStyle = 'oddrow' )
   #end
             <tr class="product $rowStyle">
-                <td class="photo"><a href="$base/products/$product.number/items"><img src="$base/$attachments.getAttachmentUrl($product)"></a></td>
+                <td class="photo"><a href="$base/products/$product.number/items"><img src="$base$attachments.getAttachmentUrl($product)"></a></td>
                 <td class="name"><a href="$base/products/$product.number/items">$product.name</a></td>
                 <td>$!product.description</td>
             </tr>
