--- a/petstore-app/src/main/webapp/WEB-INF/velocity/includes/_cart.vm
+++ b/petstore-app/src/main/webapp/WEB-INF/velocity/includes/_cart.vm
@@ -1,5 +1,5 @@
 #if ($cart && !$cart.empty)
-<a href="$base/cartitems">$cart.totalQuantity $display.plural($cart.totalQuantity, "item")</a>
+<a href="$base/cart">$cart.totalQuantity $display.plural($cart.totalQuantity, "item")</a>
 #else
 Empty
 #end
