--- a/petstore-app/src/main/webapp/WEB-INF/views/decorators/main.vm
+++ b/petstore-app/src/main/webapp/WEB-INF/views/decorators/main.vm
@@ -13,15 +13,15 @@
         <a href="$base" id="homelink">Home</a>
 
         <div id="search-box">
-            #parse("/WEB-INF/views/includes/_search.vm")
+            #parse("_search.vm")
         </div>
         <div id="logout">
-            #parse("/WEB-INF/views/includes/_logout.vm")
+            #parse("_logout.vm")
         </div>
         <div id="shopping-cart">
             <!-- Spring stores proxied objects in the session with a "scopedTarget." prefix -->
             #set( $cart = $session.getAttribute('scopedTarget.cart') )
-        #parse("/WEB-INF/views/includes/_cart.vm")
+        #parse("_cart.vm")
         </div>
     </div>
     <div id="content">
