Unit price of cart items no longer susceptible to change in item price.

--- a/petstore-app/src/main/webapp/WEB-INF/views/purchases/new.vm
+++ b/petstore-app/src/main/webapp/WEB-INF/views/purchases/new.vm
@@ -10,7 +10,7 @@
         <ol class="calculations">
             <li>
                 <span class="label">Total: </span>
-                <span id="order-total" class="total">$order.totalPrice</span>
+                <span id="order-total" class="total">$cart.grandTotal</span>
             </li>
         </ol>
     </div>
