--- a/petstore-app/src/main/webapp/WEB-INF/views/cart.vm
+++ b/petstore-app/src/main/webapp/WEB-INF/views/cart.vm
@@ -29,7 +29,7 @@
         <tr id="cart_item_$cartItem.itemNumber" class="cart-item $rowStyle">
             <td class="count">$cartItem.quantity</td>
             <td class="item">$!cartItem.itemDescription</td>
-            <td class="price">$cartItem.itemUnitPrice</td>
+            <td class="price">$cartItem.unitPrice</td>
             <td class="total">$cartItem.totalPrice</td>
         </tr>
         #end
